Consolidated game objects into CEntity.

--- a/3DTest.vcxproj
+++ b/3DTest.vcxproj
@@ -118,20 +118,17 @@
   <ItemGroup>
     <ClCompile Include="src\3DtestApp.cpp" />
     <ClCompile Include="src\gameGui.cpp" />
+    <ClCompile Include="src\entity.cpp" />
     <ClCompile Include="src\item.cpp" />
     <ClCompile Include="src\door.cpp" />
     <ClCompile Include="src\explosion.cpp" />
-    <ClCompile Include="src\fireable.cpp" />
     <ClCompile Include="src\gameHexArray.cpp" />
-    <ClCompile Include="src\gamehextObj.cpp" />
     <ClCompile Include="src\gameState.cpp" />
     <ClCompile Include="src\gameTextWin.cpp" />
     <ClCompile Include="src\gameWin.cpp" />
-    <ClCompile Include="src\groupItem.cpp" />
     <ClCompile Include="src\GUIgamePanel.cpp" />
     <ClCompile Include="src\GUIhealthPanel.cpp" />
     <ClCompile Include="src\GUIrichTextPanel.cpp" />
-    <ClCompile Include="src\hexItem.cpp" />
     <ClCompile Include="src\hexRenderer.cpp" />
     <ClCompile Include="src\hexWorld.cpp" />
     <ClCompile Include="src\localHotList.cpp" />
@@ -141,32 +138,26 @@
     <ClCompile Include="src\physics\hexPhysics.cpp" />
     <ClCompile Include="src\physics\phys.cpp" />
     <ClCompile Include="src\playerHexObj.cpp" />
-    <ClCompile Include="src\powerSupply.cpp" />
-    <ClCompile Include="src\qps.cpp" />
     <ClCompile Include="src\robot.cpp" />
-    <ClCompile Include="src\sprite.cpp" />
     <ClCompile Include="src\viewField.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\TC\Debug\tigConst.h" />
     <ClInclude Include="src\3DtestApp.h" />
     <ClInclude Include="src\gameGui.h" />
+    <ClInclude Include="src\entity.h" />
     <ClInclude Include="src\item.h" />
     <ClInclude Include="src\door.h" />
     <ClInclude Include="src\explosion.h" />
-    <ClInclude Include="src\fireable.h" />
     <ClInclude Include="src\gameEvents.h" />
     <ClInclude Include="src\gameHexArray.h" />
-    <ClInclude Include="src\gamehextObj.h" />
     <ClInclude Include="src\gameMsg.h" />
     <ClInclude Include="src\gameState.h" />
     <ClInclude Include="src\gameTextWin.h" />
     <ClInclude Include="src\gameWin.h" />
-    <ClInclude Include="src\groupItem.h" />
     <ClInclude Include="src\GUIgamePanel.h" />
     <ClInclude Include="src\GUIhealthPanel.h" />
     <ClInclude Include="src\GUIrichTextPanel.h" />
-    <ClInclude Include="src\hexItem.h" />
     <ClInclude Include="src\hexMsg.h" />
     <ClInclude Include="src\hexRenderer.h" />
     <ClInclude Include="src\hexWorld.h" />
@@ -176,11 +167,8 @@
     <ClInclude Include="src\physics\hexPhysics.h" />
     <ClInclude Include="src\physics\phys.h" />
     <ClInclude Include="src\playerHexObj.h" />
-    <ClInclude Include="src\powerSupply.h" />
     <ClInclude Include="src\powerUser.h" />
-    <ClInclude Include="src\qps.h" />
     <ClInclude Include="src\robot.h" />
-    <ClInclude Include="src\sprite.h" />
     <ClInclude Include="src\viewField.h" />
   </ItemGroup>
   <ItemGroup>
