--- a/3DTest.vcxproj
+++ b/3DTest.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="src\physics\hexPhysics.cpp" />
     <ClCompile Include="src\physics\phys.cpp" />
     <ClCompile Include="src\playerHexObj.cpp" />
+    <ClCompile Include="src\roboState.cpp" />
     <ClCompile Include="src\robot.cpp" />
     <ClCompile Include="src\spawner.cpp" />
     <ClCompile Include="src\viewField.cpp" />
@@ -173,6 +174,7 @@
     <ClInclude Include="src\physics\phys.h" />
     <ClInclude Include="src\playerHexObj.h" />
     <ClInclude Include="src\powerUser.h" />
+    <ClInclude Include="src\roboState.h" />
     <ClInclude Include="src\robot.h" />
     <ClInclude Include="src\spawner.h" />
     <ClInclude Include="src\viewField.h" />
