--- a/3DTest.vcxproj.filters
+++ b/3DTest.vcxproj.filters
@@ -19,6 +19,9 @@
     <Filter Include="Source Files\mapEdit">
       <UniqueIdentifier>{d6a52ab1-7061-49b4-abf9-f091e66ca610}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\items">
+      <UniqueIdentifier>{49c8eb77-e621-4f7b-b8f2-4f10bad43365}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\3DtestApp.cpp">
@@ -78,9 +81,6 @@
     <ClCompile Include="src\explosion.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\item.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\gameGui.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -104,6 +104,15 @@
     </ClCompile>
     <ClCompile Include="src\roboState.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\items\gun.cpp">
+      <Filter>Source Files\items</Filter>
+    </ClCompile>
+    <ClCompile Include="src\items\item.cpp">
+      <Filter>Source Files\items</Filter>
+    </ClCompile>
+    <ClCompile Include="src\items\armour.cpp">
+      <Filter>Source Files\items</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -176,9 +185,6 @@
     <ClInclude Include="src\explosion.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\item.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\gameGui.h">
       <Filter>Source Files</Filter>
     </ClInclude>
@@ -202,6 +208,15 @@
     </ClInclude>
     <ClInclude Include="src\roboState.h">
       <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\items\gun.h">
+      <Filter>Source Files\items</Filter>
+    </ClInclude>
+    <ClInclude Include="src\items\item.h">
+      <Filter>Source Files\items</Filter>
+    </ClInclude>
+    <ClInclude Include="src\items\armour.h">
+      <Filter>Source Files\items</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
