--- a/3DTest.vcxproj
+++ b/3DTest.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="src\GUIgamePanel.cpp" />
     <ClCompile Include="src\GUIrichTextPanel.cpp" />
     <ClCompile Include="src\hexRenderer.cpp" />
+    <ClCompile Include="src\hexRender\hexRender.cpp" />
     <ClCompile Include="src\hexWorld.cpp" />
     <ClCompile Include="src\items\armour.cpp" />
     <ClCompile Include="src\items\gun.cpp" />
@@ -147,6 +148,7 @@
     <ClCompile Include="src\windows\examWin.cpp" />
     <ClCompile Include="src\windows\inventoryWin.cpp" />
     <ClCompile Include="src\windows\itemMenu.cpp" />
+    <ClCompile Include="src\windows\nearWin.cpp" />
     <ClCompile Include="src\windows\smartWin.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -166,6 +168,7 @@
     <ClInclude Include="src\GUIrichTextPanel.h" />
     <ClInclude Include="src\hexMsg.h" />
     <ClInclude Include="src\hexRenderer.h" />
+    <ClInclude Include="src\hexRender\hexRender.h" />
     <ClInclude Include="src\hexWorld.h" />
     <ClInclude Include="src\items\armour.h" />
     <ClInclude Include="src\items\gun.h" />
@@ -185,6 +188,7 @@
     <ClInclude Include="src\windows\examWin.h" />
     <ClInclude Include="src\windows\inventoryWin.h" />
     <ClInclude Include="src\windows\itemMenu.h" />
+    <ClInclude Include="src\windows\nearWin.h" />
     <ClInclude Include="src\windows\smartWin.h" />
   </ItemGroup>
   <ItemGroup>
