Working drawfns and directionGraphic

--- a/3DTest.vcxproj
+++ b/3DTest.vcxproj
@@ -128,9 +128,13 @@
     <ClCompile Include="src\GUIgamePanel.cpp" />
     <ClCompile Include="src\GUIrichTextPanel.cpp" />
     <ClCompile Include="src\hexRenderer.cpp" />
+    <ClCompile Include="src\hexRender\destGraphic.cpp" />
     <ClCompile Include="src\hexRender\drawFunc.cpp" />
     <ClCompile Include="src\hexRender\entityDraw.cpp" />
+    <ClCompile Include="src\hexRender\graphics.cpp" />
     <ClCompile Include="src\hexRender\hexRender.cpp" />
+    <ClCompile Include="src\hexRender\itemDraw.cpp" />
+    <ClCompile Include="src\hexRender\splodeDraw.cpp" />
     <ClCompile Include="src\hexWorld.cpp" />
     <ClCompile Include="src\items\armour.cpp" />
     <ClCompile Include="src\items\gun.cpp" />
@@ -170,9 +174,14 @@
     <ClInclude Include="src\GUIrichTextPanel.h" />
     <ClInclude Include="src\hexMsg.h" />
     <ClInclude Include="src\hexRenderer.h" />
+    <ClInclude Include="src\hexRender\destGraphic.h" />
+    <ClInclude Include="src\hexRender\drawData.h" />
     <ClInclude Include="src\hexRender\drawFunc.h" />
     <ClInclude Include="src\hexRender\entityDraw.h" />
+    <ClInclude Include="src\hexRender\graphics.h" />
     <ClInclude Include="src\hexRender\hexRender.h" />
+    <ClInclude Include="src\hexRender\itemDraw.h" />
+    <ClInclude Include="src\hexRender\splodeDraw.h" />
     <ClInclude Include="src\hexWorld.h" />
     <ClInclude Include="src\items\armour.h" />
     <ClInclude Include="src\items\gun.h" />
