--- a/3DTest.vcxproj.filters
+++ b/3DTest.vcxproj.filters
@@ -150,6 +150,9 @@
     <ClCompile Include="src\hexRender\destGraphic.cpp">
       <Filter>Source Files\hexRender</Filter>
     </ClCompile>
+    <ClCompile Include="src\hexRender\avoidGraphic.cpp">
+      <Filter>Source Files\hexRender</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\3DtestApp.h">
@@ -285,6 +288,9 @@
       <Filter>Source Files\hexRender</Filter>
     </ClInclude>
     <ClInclude Include="src\hexRender\destGraphic.h">
+      <Filter>Source Files\hexRender</Filter>
+    </ClInclude>
+    <ClInclude Include="src\hexRender\avoidGraphic.h">
       <Filter>Source Files\hexRender</Filter>
     </ClInclude>
   </ItemGroup>
