--- a/3DTest.vcxproj
+++ b/3DTest.vcxproj
@@ -84,6 +84,7 @@
       <LanguageStandard>stdcpp17</LanguageStandard>
       <UndefinePreprocessorDefinitions>%(UndefinePreprocessorDefinitions)</UndefinePreprocessorDefinitions>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
+      <RuntimeTypeInfo>false</RuntimeTypeInfo>
     </ClCompile>
     <Link>
       <TargetMachine>MachineX86</TargetMachine>
@@ -117,8 +118,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\3DtestApp.cpp" />
+    <ClCompile Include="src\entity\collider.cpp" />
+    <ClCompile Include="src\entity\entity.cpp" />
+    <ClCompile Include="src\entity\transform.cpp" />
     <ClCompile Include="src\gameGui.cpp" />
-    <ClCompile Include="src\entity.cpp" />
     <ClCompile Include="src\explosion.cpp" />
     <ClCompile Include="src\gameHexArray.cpp" />
     <ClCompile Include="src\gameState.cpp" />
@@ -135,11 +138,14 @@
     <ClCompile Include="src\hexRender\hexRender.cpp" />
     <ClCompile Include="src\hexRender\itemDraw.cpp" />
     <ClCompile Include="src\hexRender\multiDraw.cpp" />
+    <ClCompile Include="src\hexRender\solidDraw.cpp" />
     <ClCompile Include="src\hexRender\splodeDraw.cpp" />
     <ClCompile Include="src\hexWorld.cpp" />
     <ClCompile Include="src\items\armour.cpp" />
     <ClCompile Include="src\items\gun.cpp" />
     <ClCompile Include="src\items\item.cpp" />
+    <ClCompile Include="src\items\item2.cpp" />
+    <ClCompile Include="src\items\shield.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\mapEdit\mapEdit.cpp" />
     <ClCompile Include="src\mapEdit\mapPatch.cpp" />
@@ -160,6 +166,9 @@
   <ItemGroup>
     <ClInclude Include="..\TC\Debug\tigConst.h" />
     <ClInclude Include="src\3DtestApp.h" />
+    <ClInclude Include="src\entity\collider.h" />
+    <ClInclude Include="src\entity\component.h" />
+    <ClInclude Include="src\entity\transform.h" />
     <ClInclude Include="src\gameEvent.h" />
     <ClInclude Include="src\gameGui.h" />
     <ClInclude Include="src\entity.h" />
@@ -182,11 +191,14 @@
     <ClInclude Include="src\hexRender\hexRender.h" />
     <ClInclude Include="src\hexRender\itemDraw.h" />
     <ClInclude Include="src\hexRender\multiDraw.h" />
+    <ClInclude Include="src\hexRender\solidDraw.h" />
     <ClInclude Include="src\hexRender\splodeDraw.h" />
     <ClInclude Include="src\hexWorld.h" />
     <ClInclude Include="src\items\armour.h" />
     <ClInclude Include="src\items\gun.h" />
     <ClInclude Include="src\items\item.h" />
+    <ClInclude Include="src\items\item2.h" />
+    <ClInclude Include="src\items\shield.h" />
     <ClInclude Include="src\mapEdit\mapEdit.h" />
     <ClInclude Include="src\mapEdit\mapPatch.h" />
     <ClInclude Include="src\missile.h" />
