--- a/3DTest.vcxproj
+++ b/3DTest.vcxproj
@@ -118,8 +118,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\3DtestApp.cpp" />
+    <ClCompile Include="src\entity\botTreadsModelCmp.cpp" />
     <ClCompile Include="src\entity\collider.cpp" />
     <ClCompile Include="src\entity\entity.cpp" />
+    <ClCompile Include="src\entity\modelCmp.cpp" />
+    <ClCompile Include="src\entity\playerModelCmp.cpp" />
     <ClCompile Include="src\entity\transform.cpp" />
     <ClCompile Include="src\gameGui.cpp" />
     <ClCompile Include="src\explosion.cpp" />
@@ -166,8 +169,11 @@
   <ItemGroup>
     <ClInclude Include="..\TC\Debug\tigConst.h" />
     <ClInclude Include="src\3DtestApp.h" />
+    <ClInclude Include="src\entity\botTreadsModelCmp.h" />
     <ClInclude Include="src\entity\collider.h" />
     <ClInclude Include="src\entity\component.h" />
+    <ClInclude Include="src\entity\modelCmp.h" />
+    <ClInclude Include="src\entity\playerModelCmp.h" />
     <ClInclude Include="src\entity\transform.h" />
     <ClInclude Include="src\gameEvent.h" />
     <ClInclude Include="src\gameGui.h" />
