--- a/3DTest.vcxproj.filters
+++ b/3DTest.vcxproj.filters
@@ -177,6 +177,12 @@
     <ClCompile Include="src\entity\botTreadsModelCmp.cpp">
       <Filter>Source Files\entity</Filter>
     </ClCompile>
+    <ClCompile Include="src\entity\aiCmp.cpp">
+      <Filter>Source Files\entity</Filter>
+    </ClCompile>
+    <ClCompile Include="src\entity\botAiCmp.cpp">
+      <Filter>Source Files\entity</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\3DtestApp.h">
@@ -339,6 +345,12 @@
       <Filter>Source Files\entity</Filter>
     </ClInclude>
     <ClInclude Include="src\entity\botTreadsModelCmp.h">
+      <Filter>Source Files\entity</Filter>
+    </ClInclude>
+    <ClInclude Include="src\entity\aiCmp.h">
+      <Filter>Source Files\entity</Filter>
+    </ClInclude>
+    <ClInclude Include="src\entity\botAiCmp.h">
       <Filter>Source Files\entity</Filter>
     </ClInclude>
   </ItemGroup>
